@@ -9,15 +9,16 @@ import org.dromara.databus.connector.Connection;
 import org.dromara.databus.connector.bpm.BpmHttpConnector;
 import org.dromara.databus.connector.bpm.dto.IdCardToUserIdRequest;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.regex.Pattern;
 
 /**
  * IDCARD_TO_USERID 组件（注册名 {@code idCardToUserId}）。
  * <p>
- * 对应老系统 IdCardToUserIdProcessor：字段级组件，按配置的多个 path 逐个读取逗号分隔的
- * 身份证号字符串，调 BPM 端查 ORGUSER.EXT1 换 userId，结果原样写回同一路径。
+ * 对应老系统 IdCardToUserIdProcessor：字段级组件，按配置的多个 path 逐个读取以
+ * separator 分隔的身份证号字符串（输入拆分与输出拼接使用同一分隔符，默认逗号），
+ * 调 BPM 端查 ORGUSER.EXT1 换 userId，结果原样写回同一路径。
  *
  * <p>失败语义（比老系统的静默 log 收紧）：某字段全部身份证号未匹配到用户时抛错，
  * 防止把空值写回业务字段；部分未匹配时告警并写回命中部分（与老系统 join 命中项行为一致）。
@@ -51,6 +52,8 @@ public class IdCardToUserIdComponent extends DatabusNodeComponent {
         Connection conn = getDatabusContext().getConnection(cfg.getConnectionId());
 
         int converted = 0;
+        int totalIdCards = 0;
+        int totalMissed = 0;
         for (int i = 0; i < cfg.getFields().size(); i++) {
             IdCardToUserIdCfg.FieldCfg field = cfg.getFields().get(i);
             if (field == null || field.getPath() == null || field.getPath().isBlank()) {
@@ -67,7 +70,9 @@ public class IdCardToUserIdComponent extends DatabusNodeComponent {
                     ? DEFAULT_SEPARATOR : field.getSeparator();
 
             IdCardToUserIdRequest request = new IdCardToUserIdRequest();
-            request.setIdCards(Arrays.asList(raw.split(",")));
+            // 输入拆分与输出拼接必须用同一 separator（Pattern.quote 防 | ; 等正则元字符）；
+            // 空段不过滤，由 BPM 端归入 missed，保持段语义与拼接端一致
+            request.setIdCards(List.of(raw.split(Pattern.quote(separator))));
             request.setSeparator(separator);
 
             Object result = connector.idCardToUserId(conn, request);
@@ -79,8 +84,10 @@ public class IdCardToUserIdComponent extends DatabusNodeComponent {
                 throw new ServiceException("IDCARD_TO_USERID 路径 " + path
                         + " 的全部身份证号均未匹配到 BPM 用户（tag=" + tag + "），原值: " + raw);
             }
+            totalIdCards += request.getIdCards().size();
             Object missed = resultMap.get("missed");
             if (missed instanceof List<?> missedList && !missedList.isEmpty()) {
+                totalMissed += missedList.size();
                 log.warn("[databus] idCardToUserId 路径 {} 有 {} 个身份证号未匹配: {} tag={}",
                         path, missedList.size(), missedList, tag);
             }
@@ -88,6 +95,12 @@ public class IdCardToUserIdComponent extends DatabusNodeComponent {
             save(path, userIds);
             converted++;
         }
+        String idCardSummary = totalIdCards + " 个身份证：命中 " + (totalIdCards - totalMissed)
+                + "，未命中 " + totalMissed;
+        if (converted > 1) {
+            idCardSummary += "（" + converted + " 个字段）";
+        }
+        resultSummary(idCardSummary);
         log.info("[databus] idCardToUserId 完成 tag={} 转换字段数={}", tag, converted);
     }
 }
